[project]
name = "genai-resilience"
version = "0.1.0"
description = "Resilient LLM inference patterns with Amazon Bedrock and LiteLLM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litellm[proxy]>=1.82.0",
    "openai>=2.0.0",
    "boto3>=1.40.0",
]

[tool.uv]
# Override litellm's fastapi-sso<0.17.0 constraint to fix CSRF vulnerability (Dependabot alert #1)
# Override litellm[proxy]'s cryptography<47.0 cap to fix the high-severity bundled-OpenSSL
# vulnerability (CVE patched in cryptography 48.0.1). cryptography is only used transitively.
override-dependencies = [
    "fastapi-sso>=0.17.0",
    "cryptography>=48.0.1",
]
